@@ -1,6 +1,7 @@
 5.0.2
 - Change: Removed deprecated code.
 - Change: Some deprecations.
+- Change: The scalar analysis classes are now reused.
 - Bugfix: The event 'Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\DebugMethods::callMe::start'
   was called too late.
 - Bugfix: Make use of the internal error callback in the string
